.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netpulse
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: haproxy
  rules:
    - host: netpulse.d3vo.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netpulse
                port:
                  number: 80
    - host: netpulse.digital
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netpulse
                port:
                  number: 80
  tls:
    - hosts:
        - netpulse.d3vo.ru
      secretName: netpulse-d3vo-ru-tls
    - hosts:
        - netpulse.digital
      secretName: netpulse-digital-tls
